# OpenNasalance

./: CLA-ENTITY.md  CLA-INDIVIDUAL.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  sdkconfig.defaults
components/atomic_audio/: CMakeLists.txt  README.md  idf_component.yml
components/atomic_audio/include/: atomic_audio.h  atomic_i2s.h  atomic_mp3.h  atomic_wav.h
components/atomic_audio/src/: atomic_audio.c  atomic_i2s.c  atomic_mp3.c  atomic_wav.c
components/atomic_bits/: CMakeLists.txt  README.md
components/atomic_bits/include/: atomic_bits.h
components/atomic_bits/src/: atomic_bits.c
components/atomic_bme280/: CMakeLists.txt
components/atomic_bme280/include/: pressure.h
components/atomic_bme280/src/: pressure.c
components/atomic_events/: CMakeLists.txt  README.md
components/atomic_events/include/: a_evt.h  a_evt_user.h
components/atomic_events/src/: a_evt.c  a_evt_user.c
components/atomic_gpio/: CMakeLists.txt  README.md
components/atomic_gpio/include/: atomic_gpio.h
components/atomic_gpio/src/: atomic_gpio.c
components/atomic_http/: CMakeLists.txt  idf_component.yml
components/atomic_http/include/: atomic_http.h
components/atomic_http/src/: atomic_http.c
components/atomic_http/web/: index.html
components/atomic_info/: CMakeLists.txt  README.md
components/atomic_info/include/: atomic_info.h
components/atomic_info/src/: atomic_info.c
components/atomic_lcd/: CMakeLists.txt  README.md  idf_component.yml
components/atomic_lcd/boards/include/: atomic_lcd_cyd.h  atomic_lcd_es3n28p.h  atomic_lcd_ring.h  atomic_lcd_tdisplay.h  atomic_lcd_w5.h  atomic_lcd_w5_old.h
components/atomic_lcd/boards/src/: atomic_lcd_cyd.c  atomic_lcd_es3n28p.c  atomic_lcd_ring.c  atomic_lcd_stubs.c  atomic_lcd_tdisplay.c  atomic_lcd_w5.c  atomic_lcd_w5_old.c
components/atomic_lcd/driver/include/: atomic_lcd_axs.h
components/atomic_lcd/driver/src/: atomic_lcd_axs.c
components/atomic_lcd/main/include/: atomic_lcd.h  atomic_lcd_config.h  atomic_lcd_jpeg.h  atomic_lcd_rgb.h  atomic_lcd_test.h
components/atomic_lcd/main/src/: atomic_lcd.c  atomic_lcd_jpeg.c  atomic_lcd_rgb.c  atomic_lcd_test.c
components/atomic_lvgl/: CMakeLists.txt  README.md  idf_component.yml
components/atomic_lvgl/config/: lv_conf.h
components/atomic_lvgl/include/: atomic_lvgl.h  atomic_lvgl_clock.h  atomic_lvgl_cmd.h  atomic_lvgl_fs.h  atomic_lvgl_jpeg.h  atomic_lvgl_test.h
components/atomic_lvgl/src/: atomic_lvgl.c  atomic_lvgl_clock.c  atomic_lvgl_cmd.c  atomic_lvgl_fs.c  atomic_lvgl_jpeg.c  atomic_lvgl_test.c  lcars24.c  lcars48.c
components/atomic_mic/: CMakeLists.txt  README.md
components/atomic_mic/include/: a_mic.h  a_mic_old.h  atomic_mic.h  claude_mic.h
components/atomic_mic/src/: a_mic.c  a_mic_old.c  atomic_mic.c  claude_mic.c
components/atomic_net/: CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml
components/atomic_net/include/: atomic_ha.h  atomic_mqtt.h  atomic_net.h  atomic_wifi.h
components/atomic_net/src/: atomic_ha.c  atomic_mqtt.c  atomic_net.c  atomic_ntp.c  atomic_wifi.c  atomic_wifi_evt.c
components/atomic_net_bad/: CMakeLists.txt  idf_component.yml
components/atomic_net_bad/include/: atomic_net_bad.h  atomic_ntp.h  atomic_wifi_bad.h  atomic_wifi_evt.h
components/atomic_net_bad/src/: atomic_ha.c  atomic_net.c  atomic_net_bad.c  atomic_wifi.c  atomic_wifi_bad.c
components/atomic_nvs/: CMakeLists.txt  README.md
components/atomic_nvs/include/: atomic_nvs.h  atomic_nvs_debug.h
components/atomic_nvs/src/: atomic_nvs.c  atomic_nvs_debug.c
components/atomic_sd/: CMakeLists.txt  README.md
components/atomic_sd/include/: atomic_sd.h
components/atomic_sd/src/: atomic_sd.c
components/atomic_touch/: CMakeLists.txt  idf_component.yml
components/atomic_ui/: CMakeLists.txt  idf_component.yml
components/atomic_ui/assets/: prompt.c  prompt_18.c  prompt_36.c  prompt_48.c  prompt_semibold.c  prompt_semibold_18.c  prompt_semibold_36.c  prompt_semibold_48.c
components/atomic_ui/include/: atomic_ui.h  atomic_ui_theme.h  atomic_ui_widgets.h  colors.h
components/atomic_ui/src/: atomic_ui.c  atomic_ui_battery.c  atomic_ui_clock.c  atomic_ui_theme.c  atomic_ui_theme_dark.c  atomic_ui_widgets.c  atomic_ui_wifi.c
components/atomic_util/: CMakeLists.txt
config/: sdkconfig.s3mini.defaults  sdkconfig.tdisplay.defaults
main/: CMakeLists.txt  idf_component.yml  main.c
main/include/: config.h  init.h  init_display.h  init_touch.h  nasometer.h
main/src/: init.c  init_display.c  init_touch.c  nasometer.c
(+8 files in other folders)
