idf_component_register(
    SRCS
        "src/atomic_lvgl.c"
        "src/lcars48.c"
"src/atomic_lvgl_test.c"
        "src/atomic_lvgl_jpeg.c"
        "src/atomic_lvgl_fs.c"
        "src/atomic_lvgl_cmd.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        lvgl
        esp_hw_support
        esp_timer
        esp_lcd
        atomic_bits
atomic_util
        atomic_lcd
        esp_psram
        atomic_info
)
